test/language/spec/declarations/valid/using_alias.topo
// Using alias for standard types

using Int = std::cpp17::int;
using Bool = std::cpp17::bool;

namespace app {
  public:
    Int compute(Int x);
    Bool isReady();
}
